# node-wirless-firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/include/: services_conf.h
main/lib/: service_api.c
main/lib/include/: service_api.h
main/sensor/: sensor_i2c.c  sensor_i2c.h  sensor_interface.c  sensor_interface.h  sensor_task.c  sensor_task.h
main/types/: service_types.h
main/wireless/: ble_gap.c  ble_gap.h  ble_gatt_server.c  ble_gatt_server.h  ble_interface.c  ble_interface.h  ble_services.h
main/wireless/services/: battery_service.c  battery_service.h  device_info_service.c  device_info_service.h  sensor_service.c  sensor_service.h
